add camera to web, add summary to dashboard

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cryptography>=46.0.3",
     "dash>=3.3.0",
     "pandas>=2.3.3",
     "pyinstaller>=6.17.0",
