add QR code counter and date selection

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "dash>=3.3.0",
     "pandas>=2.3.3",
     "pyinstaller>=6.17.0",
+    "qrcode>=8.2",
+    "reportlab>=4.4.9",
 ]
